@@ -3,6 +3,8 @@
 	* cvl/cvl_intern.h, cvl/cvl_gl.c: Replace the GLX implementation of
 	cvl_gl_context_new() with code from glewinfo, in the hope that it will
 	work in more situations.
+	* cvl/glsl/misc/resize_seq.glsl, cvl/glsl/misc/sort.glsl: Provide
+	implementation of round() because the ATI driver does not support it.
 
 2008-06-25  Martin Lambers <marlam@marlam.de>
 
